<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFDFFF"
    tools:context=".ForecastFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="35dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:text="@string/mon"
                android:textColor="#616161"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/weather_icon_17" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:text="@string/partly_cloudy_n24c_31c"
                android:textColor="#616161"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="35dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:text="@string/tue"
                android:textColor="#616161"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/weather_icon_25" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:text="@string/showers_n22c_27c"
                android:textColor="#616161"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="35dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:text="@string/wed"
                android:textColor="#616161"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/weather_icon_25" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:text="@string/rain_n22c_30c"
                android:textColor="#616161"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="35dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:text="@string/thu"
                android:textColor="#616161"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/weather_icon_37" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:text="@string/scattered_showers_n22c_27c"
                android:textColor="#616161"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="35dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:text="@string/fri"
                android:textColor="#616161"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/weather_icon_17" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:text="@string/mostly_cloudy_n22c_30c"
                android:textColor="#616161"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="35dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:text="@string/sat"
                android:textColor="#616161"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/weather_icon_17" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:text="@string/partly_cloudy_n24c_31c"
                android:textColor="#616161"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="35dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:text="@string/sun"
                android:textColor="#616161"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/weather_icon_28" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:text="@string/thunderstorms_n25c_28c"
                android:textColor="#616161"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="35dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:text="@string/mon"
                android:textColor="#616161"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/weather_icon_28" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:text="@string/scattered_thunderstorms_n27c_27c"
                android:textColor="#616161"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="35dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:text="@string/tue"
                android:textColor="#616161"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/weather_icon_29" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:text="@string/showers_n24c_26c"
                android:textColor="#616161"
                android:textSize="15sp" />

        </LinearLayout>


    </LinearLayout>
</FrameLayout>